# ITS-Sim

./: .gitignore  README.md  pyproject.toml
comet/: __init__.py  app.py  city.py  grid_city.py  premade_city.py  targets.py  utils.py
comet/agent/: __init__.py  basic_car.py  car.py  follow_car.py  idm_car.py  junction.py  light.py
comet/asset/: future_car.psd
