[tool.poetry]
name = "its-sim"
version = "0.1.0"
description = "\"Simulating and comparing different Intelligent transportation systems\""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"
numpy = "^1.24.1"
pandas = "^1.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
